add work experience, work and skill

--- a/index.html
+++ b/index.html
@@ -99,16 +99,31 @@
 						<section>
 							<span class="icon solid major fa-building"></span>
 							<h3>Software Engineer</h3>
-							<h4>Champsoft (Pvt) Ltd - (2021 June - Present)</h4>
+							<h4>Acentura Inc - (2023 May - Present)</h4>
+							<ul class="action">
+								<li><p>Develop high performance, responsive frontend application for web UI in React JS, Next JS, MUI, Strapi</p></li>
+								<li><p>Develop high performance, secure backend application for web API in Serverless, Node JS, Nest JS, AWS</p></li>
+								<li><p>Follow serverless architecture and microservice architecture for various projects</p></li>
+								<li><p>Utilize various services of Amazon Web Services as the cloud computing platform</p></li>
+								<li><p>Collaborate with backlog grooming, sprint planning, task breakdown and sprint retrospective sessions</p></li>
+								<li><p>Mentor interns and associate developers by conducting code reviews and knowledge transfer sessions</p></li>
+								<li><p>Directly engage with clients via meeting to gather requirements properly and weekly progress discussion</p></li>
+							</ul>
+						</section>
+					</div>
+					<div class="features border-0">
+						<section>
+							<span class="icon solid major fa-building"></span>
+							<h3>Software Engineer</h3>
+							<h4>Champsoft (Pvt) Ltd - (2021 June - 2023 April)</h4>
 							<ul class="action">
 								<li><p>Develop high performance, responsive frontend application for web UI in Angular, KendoUI</p></li>
-								<li><p>Develop high performance, secure backend application for web API in NodeJS, NestJS, Azure</p></li>
-								<li><p>Collaborate with sprint planning, task breakdown, estimate time allocation, code review etc</p></li>
-								<li><p>Design database structure (Universal Data Modal) and data migration between different environments</p></li>
-								<li><p>SQL script, stored procedure and function writing for efficient data processing</p></li>
+								<li><p>Develop high performance, secure backend application for web API in Node JS, Nest JS, Azure</p></li>
+								<li><p>Collaborate with sprint planning, task breakdown, estimate time allocation and code review sessions</p></li>
+								<li><p>Design database structure, data migration, SQL script, stored procedure and function writing</p></li>
 								<li><p>Develop, QA, UAT, Production deployment and release notes to QA department</p></li>
 								<li><p>Immediately identify and resolve potential issues with production environment applications</p></li>
-								<li><p>Directly engage with clients via meeting to gather requirements properly and weekly progress discussion</p></li>
+								<!-- <li><p>Directly engage with clients via meeting to gather requirements properly and weekly progress discussion</p></li> -->
 								<li><p>Collect and document user's requirements and develop logical and physical specifications</p></li>
 							</ul>
 						</section>
@@ -387,15 +402,15 @@
 									</div>
 									<p class="text-white mb-2 mt-2">React JS</p>
 									<div class="progress mb-3" style="height: 10px">
+										<div class="progress-bar bg-primary" style="width:90%"></div>
+									</div>
+									<p class="text-white mb-2 mt-2">Next JS</p>
+									<div class="progress mb-3" style="height: 10px">
 										<div class="progress-bar bg-primary" style="width:80%"></div>
 									</div>
 									<p class="text-white mb-2 mt-2">Bootstrap</p>
 									<div class="progress mb-3" style="height: 10px">
 										<div class="progress-bar bg-primary" style="width:90%"></div>
-									</div>
-									<p class="text-white mb-2 mt-2">Materialize</p>
-									<div class="progress mb-3" style="height: 10px">
-										<div class="progress-bar bg-primary" style="width:70%"></div>
 									</div>
 								</div>
 							</div>
@@ -411,11 +426,11 @@
 									</div>
 									<p class="text-white mb-2 mt-2">Nest JS</p>
 									<div class="progress mb-3" style="height: 10px">
-										<div class="progress-bar bg-primary" style="width:80%"></div>
+										<div class="progress-bar bg-primary" style="width:90%"></div>
 									</div>
-									<p class="text-white mb-2 mt-2">Spring Boot</p>
+									<p class="text-white mb-2 mt-2">Serverless</p>
 									<div class="progress mb-3" style="height: 10px">
-										<div class="progress-bar bg-primary" style="width:70%"></div>
+										<div class="progress-bar bg-primary" style="width:80%"></div>
 									</div>
 								</div>
 							</div>
