--- a/work.html
+++ b/work.html
@@ -285,6 +285,74 @@
 								</div>
 							</div>
 						</div>
+						<!-- Row seven -->
+						<div class="row">
+							<div class="col-md-6">
+								<div class="card features border-0">
+									<img class="card-img-top rounded-top" src="images/work13.png" alt="Card image cap">
+									<div class="card-body">
+										<h3 class="card-title mt-4">
+											CellEd ReWrite
+											<!-- <a href="https://github.com/SashikaMalawana/rate-me" class="icon brands fa-github float-right" target="_blank"><span class="label">GitHub</span></a> -->
+										</h3>
+										<p class="card-text mb-3">Tool for use on any mobile device to help users build skills for life and work, learn English or Spanish, and take their next steps in work and education. Users can learn at their own pace anywhere and at anytime by participating in 3-minute lessons with real-life examples. Coach assistance is available in few languages</p>
+										<ul class="actions mb-4">
+											<li><a class="button button-badge">React JS</a></li>
+											<li><a class="button button-badge">Material UI</a></li>
+											<li><a class="button button-badge">Node.JS</a></li>
+											<li><a class="button button-badge">Serverless</a></li>
+											<li><a class="button button-badge">Microservices</a></li>
+											<li><a class="button button-badge">MySql</a></li>
+										</ul>
+										<ul class="actions mb-4">
+											<li><a class="button button-badge">Amazon Web Services</a></li>
+											<li><a class="button button-badge">AWS Lambda</a></li>
+											<li><a class="button button-badge">AWS SES</a></li>
+											<li><a class="button button-badge">AWS SQS</a></li>
+											<li><a class="button button-badge">AWS SSS</a></li>
+										</ul>
+										<ul class="actions mb-4">
+											<li><a class="button button-badge">Jira</a></li>
+											<li><a class="button button-badge">Git</a></li>
+											<li><a class="button button-badge">Swagger API</a></li>
+											<li><a class="button button-badge">Figma</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="card features border-0">
+									<img class="card-img-top rounded-top" src="images/work14.png" alt="Card image cap">
+									<div class="card-body">
+										<h3 class="card-title mt-4">
+											Calgrows
+											<!-- <a href="https://github.com/SashikaMalawana/spice-products" class="icon brands fa-github float-right" target="_blank"><span class="label">GitHub</span></a> -->
+										</h3>
+										<p class="card-text mb-3">Helps you grow your career, develop your skills, and provide quality care to older adults and people with disabilities. CalGrows offers free training courses and incentive payments to caregivers working in home and community settings, including unlicensed caregivers, certified home care aides and certified nursing assistants</p>
+										<ul class="actions mb-4">
+											<li><a class="button button-badge">React JS</a></li>
+											<li><a class="button button-badge">Next JS</a></li>
+											<li><a class="button button-badge">Material UI</a></li>
+											<li><a class="button button-badge">Node.JS</a></li>
+											<li><a class="button button-badge">Nest.JS</a></li>
+											<li><a class="button button-badge">Strapi CMS</a></li>
+											<li><a class="button button-badge">MongoDB</a></li>
+										</ul>
+										<ul class="actions mb-4">
+											<li><a class="button button-badge">Amazon Web Services</a></li>
+											<li><a class="button button-badge">AWS SES</a></li>
+											<li><a class="button button-badge">Google Tag Managaer</a></li>
+											<li><a class="button button-badge">Google Analytics</a></li>
+										</ul>
+										<ul class="actions mb-4">
+											<li><a class="button button-badge">Jira</a></li>
+											<li><a class="button button-badge">Git</a></li>
+											<li><a class="button button-badge">Figma</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
