--- a/skills.html
+++ b/skills.html
@@ -105,13 +105,17 @@
 									</div>
 									<p class="text-white mb-2 mt-2">React JS</p>
 									<div class="progress mb-3" style="height: 10px">
+										<div class="progress-bar bg-primary" style="width:90%"></div>
+									</div>
+									<p class="text-white mb-2 mt-2">Next JS</p>
+									<div class="progress mb-3" style="height: 10px">
 										<div class="progress-bar bg-primary" style="width:80%"></div>
 									</div>
 									<p class="text-white mb-2 mt-2">Bootstrap</p>
 									<div class="progress mb-3" style="height: 10px">
 										<div class="progress-bar bg-primary" style="width:90%"></div>
 									</div>
-									<p class="text-white mb-2 mt-2">Materialize</p>
+									<p class="text-white mb-2 mt-2">Material UI</p>
 									<div class="progress mb-3" style="height: 10px">
 										<div class="progress-bar bg-primary" style="width:70%"></div>
 									</div>
@@ -128,6 +132,10 @@
 										<div class="progress-bar bg-primary" style="width:80%"></div>
 									</div>
 									<p class="text-white mb-2 mt-2">Nest JS</p>
+									<div class="progress mb-3" style="height: 10px">
+										<div class="progress-bar bg-primary" style="width:90%"></div>
+									</div>
+									<p class="text-white mb-2 mt-2">Serverless</p>
 									<div class="progress mb-3" style="height: 10px">
 										<div class="progress-bar bg-primary" style="width:80%"></div>
 									</div>
@@ -185,6 +193,10 @@
 									</div>
 									<p class="text-white mb-2 mt-2">Azure</p>
 									<div class="progress mb-3" style="height: 10px">
+										<div class="progress-bar bg-danger" style="width:70%"></div>
+									</div>
+									<p class="text-white mb-2 mt-2">Amazon Web Services</p>
+									<div class="progress mb-3" style="height: 10px">
 										<div class="progress-bar bg-danger" style="width:80%"></div>
 									</div>
 								</div>
@@ -198,6 +210,10 @@
 									<p class="text-white mb-2 mt-2">TFS</p>
 									<div class="progress mb-3" style="height: 10px">
 										<div class="progress-bar bg-danger" style="width:90%"></div>
+									</div>
+									<p class="text-white mb-2 mt-2">Jira</p>
+									<div class="progress mb-3" style="height: 10px">
+										<div class="progress-bar bg-danger" style="width:80%"></div>
 									</div>
 									<p class="text-white mb-2 mt-2">Kendo UI</p>
 									<div class="progress mb-3" style="height: 10px">
@@ -263,7 +279,7 @@
 									</div>
 									<p class="text-white mb-2 mt-2">Swagger API</p>
 									<div class="progress mb-3" style="height: 10px">
-										<div class="progress-bar bg-info" style="width:90%"></div>
+										<div class="progress-bar bg-info" style="width:80%"></div>
 									</div>
 								</div>
 							</div>
